Login listo y empezando con post

--- a/app/views/main/home.haml
+++ b/app/views/main/home.haml
@@ -1,2 +1,3 @@
 %h1 Bienvenido a la pagina
-%p Usando HALM
+-if user_signed_in?
+	=link_to "Cerrar Sesión",destroy_user_session_path, method: :delete
