Comenzando con el perfil de usuario

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -4,11 +4,23 @@ html,body{
 .full-height{
 	height:100%;
 }
+.full-width{
+	width:100%;
+}
 .no-margin{
 	margin: 0;
 }
+.medium{
+	font-size:1.2em;
+}
+.large-padding{
+	padding:10px 15px;
+}
 .big-padding{
 	padding: 2em 1.5em;
+}
+.border-bottom{
+	border-bottom:1px solid currentcolor;
 }
 .top-space{
 	margin-top: 1em;
@@ -18,4 +30,11 @@ html,body{
 }
 .text-left{
 	text-align:left;
+}
+.text-right{
+	text-align:right;
+}
+.remove-bullet-points{
+	list-style-type:none;
+	margin:0;
 }
