--- a/app/views/main/unregistered.haml
+++ b/app/views/main/unregistered.haml
@@ -1,6 +1,6 @@
 .full-height.row.middle-xs.white-text.center-xs.main-background.no-margin
 	
-	%div.col-xs-12col-sm-8col-md-6col-lg-4
+	%div.col-xs-12.col-sm-8.col-md-6.col-lg-4
 		%div.box
 			.big-padding.blue.text-left.white-text
 				%h1.bold.light-blue-text.no-margin Red Social
