--- a/app/views/main/home.haml
+++ b/app/views/main/home.haml
@@ -1,3 +1,16 @@
-%h1 Bienvenido a la pagina
--if user_signed_in?
-	=link_to "Cerrar Sesión",destroy_user_session_path, method: :delete
+.top-space
+	.row.center-xs
+		.col-xs-8.col-md-10
+			.box
+				.row
+					.col-lg-2.col-sm-3.col-xs-10
+						.box
+							%ul.remove-bullet-points.text-left
+								%li=link_to "Explorar","#"
+								%li=link_to "Sugerencias","#"
+					.col-sm.col-xs-10.col-lg
+						.box
+							.white.large-padding
+								=render "posts/form"
+							#posts
+							=render @posts
