--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,6 +1,12 @@
 html,body{
 	height: 100%;
 }
+.absolute{
+	position:absolute;
+}
+.relative{
+	position:relative;
+}
 .full-height{
 	height:100%;
 }
@@ -37,4 +43,7 @@ html,body{
 .remove-bullet-points{
 	list-style-type:none;
 	margin:0;
+}
+.circle{
+	border-radius:50%;
 }
