--- a/app/views/main/home.haml
+++ b/app/views/main/home.haml
@@ -13,4 +13,7 @@
 							.white.large-padding
 								=render "posts/form"
 							#posts
-							=render @posts
+								.data
+									=render @posts
+								#pagination
+									=will_paginate @posts
