--- a/app/views/partials/_nav.haml
+++ b/app/views/partials/_nav.haml
@@ -1,12 +1,13 @@
 %header.mdl-layout__header.mdl-layout__header--scroll
   .mdl-layout__header-row
 
-    %span.mdl-layout-title Red Social
-
+    %span.mdl-layout-title=link_to "Red Social", root_path,class:"white-text",style:"text-decoration:none;"
     .mdl-layout-spacer
 
     %nav.mdl-navigation.mdl-layout--large-screen-only
       -if user_signed_in?
+        =link_to "Mis amigos",friendships_path, class:"white-text right-space"
+        =link_to current_user.username,current_user, class:"white-text right-space"
         =link_to "Cerrar Sesión",destroy_user_session_path,method: :delete, class:"white-text"
 
 .mdl-layout__drawer
