--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,3 +16,31 @@ body{
 .remotipart{
 	display:none;
 }
+
+#notification{
+	width:1.5em;
+	height:1.6em;
+	text-align:center;
+	display:inline-block;
+	text-decoration:none;
+}
+
+#notifications{
+	position:absolute;
+	background:white;
+	top:65px;
+	right:175px;
+	width:160px;
+	color:black;
+	max-height:0px;
+	overflow:hidden;
+	transition:all 0.4s; 
+	&.active{
+		max-height:300px;
+		padding: 10px 15px;
+		overflow-y: scroll;
+	}
+}
+.close-parent{
+	cursor:pointer;
+}
